--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -135,11 +135,6 @@
     min-width: 95%;
     margin: 0 5px;
   }
-  .sendEmails {
-    min-width: 95%;
-    margin-left: 5px;
-    margin-right: 5px;
-  }
 }
 
 @media screen and (max-width: 625px) {
