--- a/public/css/themes/secret-santa.css
+++ b/public/css/themes/secret-santa.css
@@ -3,7 +3,7 @@
   flex: 1 1 0%;
   min-width: 0;
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   flex-wrap: wrap;
   #name-list,
   .household,
